--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "*",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.25",
+        "psr/simple-cache": "^2.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
